--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -36,19 +36,20 @@ jobs:
             mkdir build &&
             cd build &&
             cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_INSTALL_PREFIX=$TEMP_PATH .. &&
-            sudo make install'
+            make -j4 &&
+            make install'
 
     - name: Compile LeanHRPT
       run: 'mkdir build &&
             cd build &&
             cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_INSTALL_PREFIX=$TEMP_PATH .. &&
-            make'
+            make -j4'
 
     - name: Package
       run: 'mkdir LeanHRPT-Decode &&
             mkdir LeanHRPT-Decode/plugins &&
             mkdir LeanHRPT-Decode/lib &&
-            cp $TEMP_PATH/plugins/platforms/ LeanHRPT-Decode/plugins/ &&
+            cp -r $TEMP_PATH/plugins/platforms/ LeanHRPT-Decode/plugins/ &&
             cp $TEMP_PATH/lib/libQt5Gui.so.5 LeanHRPT-Decode/lib/ &&
             cp $TEMP_PATH/lib/libQt5Widgets.so.5 LeanHRPT-Decode/lib/ &&
             cp $TEMP_PATH/lib/libQt5Core.so.5 LeanHRPT-Decode/lib/ &&
