--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Linux Build
+name: Create release
 
 on:
   push:
@@ -8,6 +8,7 @@ on:
 env:
   BUILD_TYPE: Release
   TEMP_PATH: /tmp/build
+  WIN_TEMP_PATH: /tmp/winbuild
 
 jobs:
   build:
@@ -18,17 +19,20 @@ jobs:
       uses: actions/checkout@v2
     
     - name: Install apt dependencies
-      run: 'sudo apt-get update && sudo apt-get install -y cmake make git g++ python3 python3-pip mesa-common-dev libglu1-mesa-dev'
+      run: 'sudo apt-get update && sudo apt-get install -y cmake make git g++ mingw-w64 python3 python3-pip mesa-common-dev libglu1-mesa-dev zip'
 
     - name: Install pip dependencies
       run: 'pip3 install aqtinstall'
 
     - name: Create build path
-      run: 'mkdir $TEMP_PATH'
+      run: 'mkdir $TEMP_PATH &&
+            mkdir $WIN_TEMP_PATH'
 
     - name: Install Qt
       run: 'aqt install 5.14.2 linux desktop &&
-            cp -r 5.14.2/gcc_64/* $TEMP_PATH'
+            aqt install 5.14.2 windows desktop win64_mingw73 &&
+            cp -r 5.14.2/gcc_64/* $TEMP_PATH &&
+            cp -r 5.14.2/win64_mingw73/* $WIN_TEMP_PATH'
 
     - name: Install libcorrect
       run: 'git clone https://github.com/quiet/libcorrect &&
@@ -39,10 +43,24 @@ jobs:
             make -j4 &&
             make install'
 
+    - name: Install libcorrect (windows)
+      run: 'cd libcorrect &&
+            cd build &&
+            rm -r * &&
+            cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_TOOLCHAIN_FILE=../../cmake/mingw-w64-x86_64.cmake -DCMAKE_INSTALL_PREFIX=$WIN_TEMP_PATH .. &&
+            make -j4 &&
+            make install'
+
     - name: Compile LeanHRPT
       run: 'mkdir build &&
             cd build &&
             cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_INSTALL_PREFIX=$TEMP_PATH .. &&
+            make -j4'
+
+    - name: Compile LeanHRPT (windows)
+      run: 'mkdir winbuild &&
+            cd winbuild &&
+            cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_TOOLCHAIN_FILE=../../cmake/mingw-w64-x86_64.cmake -DCMAKE_INSTALL_PREFIX=$WIN_TEMP_PATH .. &&
             make -j4'
 
     - name: Package
@@ -72,12 +90,22 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload compiled package
+    - name: Upload linux build
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./LeanHRPT-Decode.linux.amd64.tar.gz
         asset_name: LeanHRPT-Decode.linux.amd64.tar.gz
         asset_content_type: application/gzip
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+
+    - name: Upload windows build
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./windbuild/LeanHRPT-Decode.exe
+        asset_name: LeanHRPT-Decode.exe
+        asset_content_type: application/x-dosexec
       env:
         GITHUB_TOKEN: ${{ github.token }}
