--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Install pip dependencies
       run: 'pip3 install -U pip && pip3 install aqtinstall'
 
+    - name: Download AppImageKit
+      run: 'wget https://github.com/AppImage/AppImageKit/releases/download/13/appimagetool-x86_64.AppImage && chmod +x appimagetool-x86_64.AppImage'
+
     - name: Create build path
       run: 'mkdir $TEMP_PATH'
 
@@ -46,21 +49,26 @@ jobs:
             make -j4'
 
     - name: Package
-      run: 'mkdir LeanHRPT-Decode &&
-            mkdir LeanHRPT-Decode/plugins &&
-            mkdir LeanHRPT-Decode/lib &&
-            cp -r $TEMP_PATH/plugins/platforms/ LeanHRPT-Decode/plugins/ &&
-            cp $TEMP_PATH/lib/libQt5Gui.so.5 LeanHRPT-Decode/lib/ &&
-            cp $TEMP_PATH/lib/libQt5Widgets.so.5 LeanHRPT-Decode/lib/ &&
-            cp $TEMP_PATH/lib/libQt5Core.so.5 LeanHRPT-Decode/lib/ &&
-            cp $TEMP_PATH/lib/libQt5XcbQpa.so.5 LeanHRPT-Decode/lib/ &&
-            cp $TEMP_PATH/lib/libQt5DBus.so.5 LeanHRPT-Decode/lib/ &&
-            cp $TEMP_PATH/lib/libicuuc.so.56 LeanHRPT-Decode/lib/ &&
-            cp $TEMP_PATH/lib/libicui18n.so.56 LeanHRPT-Decode/lib/ &&
-            cp $TEMP_PATH/lib/libicudata.so.56 LeanHRPT-Decode/lib/ &&
-            cp $TEMP_PATH/lib/libcorrect.so LeanHRPT-Decode/lib/ &&
-            cp build/LeanHRPT-Decode LeanHRPT-Decode/ &&
-            tar -czf LeanHRPT-Decode.linux.amd64.tar.gz --owner=0 --group=0 LeanHRPT-Decode/'
+      run: 'mkdir LeanHRPT-Decode.AppDir &&
+            mkdir LeanHRPT-Decode.AppDir/usr &&
+            mkdir LeanHRPT-Decode.AppDir/usr/bin &&
+            mkdir LeanHRPT-Decode.AppDir/usr/lib &&
+            mkdir LeanHRPT-Decode.AppDir/usr/plugins &&
+            cp AppRun                            LeanHRPT-Decode.AppDir/ &&
+            cp LeanHRPT-Decode.desktop           LeanHRPT-Decode.AppDir/ &&
+            cp logo128.png                       LeanHRPT-Decode.AppDir/ &&
+            cp -r $TEMP_PATH/plugins/platforms/  LeanHRPT-Decode.AppDir/usr/plugins/ &&
+            cp $TEMP_PATH/lib/libQt5Gui.so.5     LeanHRPT-Decode.AppDir/usr/lib/ &&
+            cp $TEMP_PATH/lib/libQt5Widgets.so.5 LeanHRPT-Decode.AppDir/usr/lib/ &&
+            cp $TEMP_PATH/lib/libQt5Core.so.5    LeanHRPT-Decode.AppDir/usr/lib/ &&
+            cp $TEMP_PATH/lib/libQt5XcbQpa.so.5  LeanHRPT-Decode.AppDir/usr/lib/ &&
+            cp $TEMP_PATH/lib/libQt5DBus.so.5    LeanHRPT-Decode.AppDir/usr/lib/ &&
+            cp $TEMP_PATH/lib/libicuuc.so.56     LeanHRPT-Decode.AppDir/usr/lib/ &&
+            cp $TEMP_PATH/lib/libicui18n.so.56   LeanHRPT-Decode.AppDir/usr/lib/ &&
+            cp $TEMP_PATH/lib/libicudata.so.56   LeanHRPT-Decode.AppDir/usr/lib/ &&
+            cp $TEMP_PATH/lib/libcorrect.so      LeanHRPT-Decode.AppDir/usr/lib/ &&
+            cp build/LeanHRPT-Decode             LeanHRPT-Decode.AppDir/usr/bin/ &&
+            ./appimagetool-x86_64.AppImage LeanHRPT-Decode.AppDir'
 
     - name: Create Release
       uses: actions/create-release@v1
@@ -74,12 +82,12 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload linux build
+    - name: Upload AppImage
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./LeanHRPT-Decode.linux.amd64.tar.gz
-        asset_name: LeanHRPT-Decode.linux.amd64.tar.gz
-        asset_content_type: application/gzip
+        asset_path: ./LeanHRPT-Decode-x86_64.AppImage
+        asset_name: LeanHRPT-Decode-x86_64.AppImage
+        asset_content_type: application/x-executable
       env:
         GITHUB_TOKEN: ${{ github.token }}
