--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,12 @@
 name: Build
 
-on: [push]
+on:
+  push:
+    tags-ignore:
+      - '**'
+  pull_request:
+    branches:
+      - master
 
 env:
   BUILD_TYPE: Release
