--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,8 +86,8 @@ jobs:
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./LeanHRPT-Decode-x86_64.AppImage
-        asset_name: LeanHRPT-Decode-x86_64.AppImage
+        asset_path: ./LeanHRPT_Decode-x86_64.AppImage
+        asset_name: LeanHRPT_Decode-x86_64.AppImage
         asset_content_type: application/x-executable
       env:
         GITHUB_TOKEN: ${{ github.token }}
