--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,6 @@
 name: Build
 
-on:
-  push:
-    tags-ignore:
-      - '**'
-  pull_request:
-    branches:
-      - master
+on: [push, pull_request]
 
 env:
   BUILD_TYPE: Release
