--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ target_link_libraries(LeanHRPT-Decode PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
 # Bodge fix for GitHub Actions
 target_link_directories(LeanHRPT-Decode PRIVATE /tmp/build/lib)
+target_link_directories(LeanHRPT-Decode PRIVATE /tmp/winbuild/lib)
 
 target_link_libraries(LeanHRPT-Decode PUBLIC correct)
 target_link_libraries(LeanHRPT-Decode PUBLIC muparser)
