Compositor rewrite (and a fair bit of MainWindow) Composite images on the fly (instead of all at once on every change) and cache the result for snappier equlisation As well as multithreading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,8 @@ target_link_directories(LeanHRPT-Decode PRIVATE /tmp/winbuild/lib)
 
 target_link_libraries(LeanHRPT-Decode PUBLIC correct)
 target_link_libraries(LeanHRPT-Decode PUBLIC muparser)
+
+find_package(OpenMP)
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(LeanHRPT-Decode PRIVATE OpenMP::OpenMP_CXX)
+endif()
