--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,10 @@ find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
 target_link_libraries(LeanHRPT-Decode PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
 # Bodge fix for GitHub Actions
-target_link_directories(LeanHRPT-Decode PRIVATE /tmp/build/lib)
-target_link_directories(LeanHRPT-Decode PRIVATE /tmp/winbuild/lib)
+if (WAR_CRIMES)
+    target_link_directories(LeanHRPT-Decode PRIVATE /tmp/build/lib)
+    target_link_directories(LeanHRPT-Decode PRIVATE /tmp/winbuild/lib)
+endif()
 
 target_link_libraries(LeanHRPT-Decode PUBLIC correct)
 target_link_libraries(LeanHRPT-Decode PUBLIC muparser)
