Use correct mission names in `Mission`

--- a/calibration.ini
+++ b/calibration.ini
@@ -1,6 +1,15 @@
-# Sources:
-#  https://www.ospo.noaa.gov/data/ppp/notice_files/aug1021.html
-#  http://www.nsmc.org.cn/en/NSMC/Contents/100089.html
+#
+# LeanHRPT calibration coefficients file
+# 
+#  This file contains the coefficients user to calibrate visible channels,
+#  currently it supports 2 types of calibration:
+#   Linear (VIRR and MSU-MR)
+#   Split linear (AVHRR)
+# 
+#  Sources:
+#   https://www.ospo.noaa.gov/data/ppp/notice_files/aug1021.html
+#   http://www.nsmc.org.cn/en/NSMC/Contents/100089.html
+#
 
 [MetOp-A/1]
 a1 = 0.05747
