--- a/presets.ini
+++ b/presets.ini
@@ -14,25 +14,25 @@
 description = False color Near-Infrared (RGB221)
 category = Basic Composites
 author = Xerbo
-satellites = NOAA|Meteor|FengYun|MetOp
+imagers = AVHRR|MSU-MR|VIRR
 expression = rgb(ch2, ch2, ch1)
 [SWIR]
 description = False color Shortwave-Infrared (RGB321)
 category = Basic Composites
 author = Xerbo
-satellites = NOAA|Meteor|MetOp
+imagers = AVHRR|MSU-MR
 expression = rgb(ch3, ch2, ch1)
 [SWIR (VIRR)]
 description = False color Shortwave-Infrared (RGB621)
 category = Basic Composites
 author = Xerbo
-satellites = FengYun
+imagers = VIRR
 expression = rgb(ch6, ch2, ch1)
 [RGB]
 description = Visible light composite (RGB197)
 category = Basic Composites
 author = Xerbo
-satellites = FengYun
+imagers = VIRR
 expression = rgb(ch1, ch9, ch7)
 
 # Blended composites
@@ -41,25 +41,25 @@ expression = rgb(ch1, ch9, ch7)
 description = False color Combined Shortwave-Infrared
 category = Blended Composites
 author = dereksgc
-satellites = Meteor|MetOp
+imagers = MSU-MR|AVHRR
 expression = rgb(max(ch3,min(ch2,ch1)), ch2, ch1)
 [CSWIR (VIRR)]
 description = False color Combined Shortwave-Infrared
 category = Blended Composites
 author = dereksgc
-satellites = FengYun
+imagers = VIRR
 expression = rgb(max(ch6,min(ch2,ch1)), ch2, ch1)
 [NCNIR]
 description = Natural Color Near-Infrared
 category = Blended Composites
 author = dereksgc
-satellites = FengYun
+imagers = VIRR
 expression = rgb(0.7*ch1+0.3*ch2, 0.7*ch9+0.3*ch2, 0.7*ch7+0.3*ch1)
 [NCSWIR]
 description = Natural Color Shortwave-Infrared
 category = Blended Composites
 author = dereksgc
-satellites = FengYun
+imagers = VIRR
 expression = rgb(0.7*ch1+0.3*(max(ch6,min(ch2,ch1))), 0.8*ch9+0.2*ch2, 0.7*ch7+0.3*ch1)
 
 # Additional products
@@ -68,11 +68,11 @@ expression = rgb(0.7*ch1+0.3*(max(ch6,min(ch2,ch1))), 0.8*ch9+0.2*ch2, 0.7*ch7+0
 description = Normalized Difference Vegetation Index
 category = Additional Products
 author = Xerbo
-satellites = NOAA|Meteor|FengYun|MetOp
+imagers = AVHRR|MSU-MR|VIRR
 expression = bw(((ch2-ch1)/(ch2+ch1)+1)/2)
 [NDVI+NIR]
 description = Normalized Difference Vegetation Index with NIR false color overlay
 category = Additional Products
 author = dereksgc
-satellites = NOAA|MetOp|FengYun
+imagers = AVHRR|VIRR
 expression = rgb(ch2, max(ch2, (ch2-ch1)/(ch2+ch1)), ch1)
