Use SWIR variable in presets (remove VIRR specific presets)

--- a/presets.ini
+++ b/presets.ini
@@ -17,17 +17,11 @@ author = Xerbo
 imagers = AVHRR|MSU-MR|VIRR
 expression = rgb(ch2, ch2, ch1)
 [SWIR]
-description = False color Shortwave-Infrared (RGB321)
+description = False color Shortwave-Infrared (RGB321, RGB621 on FengYun)
 category = Basic Composites
 author = Xerbo
-imagers = AVHRR|MSU-MR
-expression = rgb(ch3, ch2, ch1)
-[SWIR (VIRR)]
-description = False color Shortwave-Infrared (RGB621)
-category = Basic Composites
-author = Xerbo
-imagers = VIRR
-expression = rgb(ch6, ch2, ch1)
+imagers = AVHRR|MSU-MR|VIRR
+expression = rgb(SWIR, ch2, ch1)
 [RGB]
 description = Visible light composite (RGB197)
 category = Basic Composites
@@ -41,14 +35,8 @@ expression = rgb(ch1, ch9, ch7)
 description = False color Combined Shortwave-Infrared
 category = Blended Composites
 author = dereksgc
-imagers = MSU-MR|AVHRR
-expression = rgb(max(ch3,min(ch2,ch1)), ch2, ch1)
-[CSWIR (VIRR)]
-description = False color Combined Shortwave-Infrared
-category = Blended Composites
-author = dereksgc
-imagers = VIRR
-expression = rgb(max(ch6,min(ch2,ch1)), ch2, ch1)
+imagers = MSU-MR|AVHRR|VIRR
+expression = rgb(max(SWIR,min(ch2,ch1)), ch2, ch1)
 [NCNIR]
 description = Natural Color Near-Infrared
 category = Blended Composites
