--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -1,6 +1,10 @@
 name: Windows Build
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 env:
   BUILD_TYPE: Release
