Add version number (or commit hash) to about text

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,3 +42,18 @@ find_package(OpenMP)
 if(OpenMP_CXX_FOUND)
     target_link_libraries(LeanHRPT-Decode PRIVATE OpenMP::OpenMP_CXX)
 endif()
+
+find_package(Git)
+if (GIT_FOUND)
+    execute_process(COMMAND ${GIT_EXECUTABLE} rev-parse HEAD           WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR} OUTPUT_VARIABLE GIT_HASH  OUTPUT_STRIP_TRAILING_WHITESPACE)
+    execute_process(COMMAND ${GIT_EXECUTABLE} describe --tag           WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR} OUTPUT_VARIABLE GIT_TAG   OUTPUT_STRIP_TRAILING_WHITESPACE)
+    execute_process(COMMAND ${GIT_EXECUTABLE} rev-list -n 1 ${GIT_TAG} WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR} OUTPUT_VARIABLE TAG_HASH  OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+    if (${GIT_HASH} EQUAL ${TAG_HASH})
+        target_compile_definitions(LeanHRPT-Decode PRIVATE "VERSION=\"${GIT_TAG}\"")
+    else()
+        target_compile_definitions(LeanHRPT-Decode PRIVATE "VERSION=\"${GIT_HASH} (hash)\"")
+    endif()
+else()
+    target_compile_definitions(LeanHRPT-Decode PRIVATE "VERSION=\"Unknown\"")
+endif()
