--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,10 @@ on:
 env:
   BUILD_TYPE: Release
   TEMP_PATH: /tmp/build
+  WIN_TEMP_PATH: /tmp/winbuild
 
 jobs:
-  build:
+  build_linux:
     runs-on: ubuntu-latest
 
     steps:
@@ -42,7 +43,7 @@ jobs:
             cd libcorrect &&
             mkdir build &&
             cd build &&
-            cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_INSTALL_PREFIX=$TEMP_PATH .. &&
+            cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=$TEMP_PATH .. &&
             make -j4 &&
             make install'
 
@@ -51,7 +52,7 @@ jobs:
             cd muparser &&
             mkdir build &&
             cd build &&
-            cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_INSTALL_PREFIX=$TEMP_PATH -DENABLE_OPENMP=OFF -DENABLE_SAMPLES=OFF .. &&
+            cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=$TEMP_PATH -DENABLE_OPENMP=OFF -DENABLE_SAMPLES=OFF .. &&
             make -j4 &&
             make install'
 
@@ -90,3 +91,84 @@ jobs:
       with:
         name: LeanHRPT_Decode-x86_64.AppImage
         path: ./LeanHRPT_Decode-x86_64.AppImage
+
+  build_windows:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Install apt dependencies
+      run: 'sudo apt-get update && sudo apt-get install -y cmake make git python3 python3-pip mingw-w64 zip'
+
+    - name: Install pip dependencies
+      run: 'pip3 install -U pip && pip3 install aqtinstall'
+
+    - name: Create build path
+      run: 'mkdir $TEMP_PATH && mkdir $WIN_TEMP_PATH'
+
+    - name: Install Qt
+      run: 'aqt install 5.14.2 linux desktop &&
+            aqt install 5.14.2 windows desktop win64_mingw73 || true &&
+            cp -r 5.14.2/gcc_64/* $TEMP_PATH &&
+            cp -r 5.14.2/mingw73_64/* $WIN_TEMP_PATH'
+
+    - name: Patch Qt
+      run: 'rm $WIN_TEMP_PATH/bin/moc.exe &&
+            ln -s $TEMP_PATH/bin/moc $WIN_TEMP_PATH/bin/moc.exe &&
+            rm $WIN_TEMP_PATH/bin/rcc.exe &&
+            ln -s $TEMP_PATH/bin/rcc $WIN_TEMP_PATH/bin/rcc.exe &&
+            rm $WIN_TEMP_PATH/bin/uic.exe &&
+            ln -s $TEMP_PATH/bin/uic $WIN_TEMP_PATH/bin/uic.exe'
+    
+    - name: Install libcorrect
+      run: 'git clone https://github.com/quiet/libcorrect &&
+            cd libcorrect &&
+            mkdir build &&
+            cd build &&
+            cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=../cmake/mingw-w64-x86_64.cmake -DCMAKE_INSTALL_PREFIX=$WIN_TEMP_PATH .. &&
+            make -j4 &&
+            make install'
+
+    - name: Install muparser
+      run: 'git clone https://github.com/beltoforion/muparser &&
+            cd muparser &&
+            mkdir build &&
+            cd build &&
+            cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=../cmake/mingw-w64-x86_64.cmake -DCMAKE_INSTALL_PREFIX=$WIN_TEMP_PATH -DENABLE_OPENMP=OFF -DENABLE_SAMPLES=OFF -DCMAKE_SHARED_LINKER_FLAGS="-static-libstdc++" .. &&
+            make -j4 &&
+            make install'
+
+    - name: Compile LeanHRPT
+      run: 'mkdir build &&
+            cd build &&
+            cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_TOOLCHAIN_FILE=../cmake/mingw-w64-x86_64.cmake -DCMAKE_INSTALL_PREFIX=$WIN_TEMP_PATH -DWAR_CRIMES=1 .. &&
+            make -j4'
+
+    - name: Package
+      run: 'mkdir LeanHRPT-Decode &&
+            mkdir LeanHRPT-Decode/plugins &&
+            mkdir LeanHRPT-Decode/plugins/styles &&
+            mkdir LeanHRPT-Decode/platforms &&
+            cp logo128.png                                             LeanHRPT-Decode/ &&
+            cp presets.ini                                             LeanHRPT-Decode/ &&
+            cp calibration.ini                                         LeanHRPT-Decode/ &&
+            cp build/LeanHRPT-Decode.exe                               LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/bin/Qt5Core.dll                          LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/bin/Qt5Gui.dll                           LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/bin/Qt5Widgets.dll                       LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/lib/libcorrect.dll                       LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/bin/libmuparser.dll                      LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/bin/libgcc_s_seh-1.dll                   LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/bin/libstdc++-6.dll                      LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/bin/libwinpthread-1.dll                  LeanHRPT-Decode/ &&
+            cp /usr/lib/gcc/x86_64-w64-mingw32/9.3-win32/libgomp-1.dll LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/plugins/styles/qwindowsvistastyle.dll    LeanHRPT-Decode/plugins/styles/ &&
+            cp $WIN_TEMP_PATH/plugins/platforms/qwindows.dll           LeanHRPT-Decode/platforms/ &&
+            zip -r LeanHRPT-Decode.zip LeanHRPT-Decode/'
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: LeanHRPT_Decode-x86_64-w64
+        path: ./LeanHRPT-Decode/
