--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,17 +8,61 @@ on:
 env:
   BUILD_TYPE: Release
   TEMP_PATH: /tmp/build
+  WIN_TEMP_PATH: /tmp/winbuild
 
 jobs:
-  build:
+  prepare_release:
     runs-on: ubuntu-latest
+
+    steps:
+    - name: Create Release
+      uses: actions/create-release@v1
+      id: create_release
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        body: A release wow
+        draft: false
+        prerelease: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  upload_flowcharts:
+    runs-on: ubuntu-latest
+    needs: [prepare_release]
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
     - name: Install apt dependencies
-      run: 'sudo apt-get update && sudo apt-get install -y cmake make git g++ python3 python3-pip mesa-common-dev libglu1-mesa-dev zip'
+      run: 'sudo apt-get update && sudo apt-get install -y zip'
+
+    - name: Zip up flowcharts
+      run: 'zip -r Flowcharts.zip Flowcharts/'
+
+    - name: Upload flowcharts
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./Flowcharts.zip
+        asset_name: Flowcharts.zip
+        asset_content_type: application/zip
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+
+  build_linux:
+    runs-on: ubuntu-latest
+    needs: [prepare_release]
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+
+    - name: Install apt dependencies
+      run: 'sudo apt-get update && sudo apt-get install -y cmake make git g++ python3 python3-pip mesa-common-dev libglu1-mesa-dev'
 
     - name: Install pip dependencies
       run: 'pip3 install -U pip && pip3 install aqtinstall'
@@ -82,21 +126,6 @@ jobs:
             cp build/LeanHRPT-Decode             LeanHRPT-Decode.AppDir/usr/bin/ &&
             ./appimagetool-x86_64.AppImage LeanHRPT-Decode.AppDir'
 
-    - name: Package Flowgraphs
-      run: 'zip -r Flowgraphs.zip Flowgraphs/'
-
-    - name: Create Release
-      uses: actions/create-release@v1
-      id: create_release
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        body: A release wow
-        draft: false
-        prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
     - name: Upload AppImage
       uses: actions/upload-release-asset@v1
       with:
@@ -107,12 +136,86 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ github.token }}
 
-    - name: Upload Flowgraphs
-      uses: actions/upload-release-asset@v1
+  build_windows:
+    runs-on: ubuntu-latest
+    needs: [prepare_release]
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./Flowgraphs.zip
-        asset_name: Flowgraphs.zip
-        asset_content_type: application/zip
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+        fetch-depth: 0
+
+    - name: Install apt dependencies
+      run: 'sudo apt-get update && sudo apt-get install -y cmake make git python3 python3-pip mingw-w64 zip'
+
+    - name: Install pip dependencies
+      run: 'pip3 install -U pip && pip3 install aqtinstall'
+
+    - name: Create build path
+      run: 'mkdir $TEMP_PATH && mkdir $WIN_TEMP_PATH'
+
+    - name: Install Qt
+      run: 'aqt install 5.14.2 linux desktop &&
+            aqt install 5.14.2 windows desktop win64_mingw73 || true &&
+            cp -r 5.14.2/gcc_64/* $TEMP_PATH &&
+            cp -r 5.14.2/mingw73_64/* $WIN_TEMP_PATH'
+
+    - name: Patch Qt
+      run: 'rm $WIN_TEMP_PATH/bin/moc.exe &&
+            ln -s $TEMP_PATH/bin/moc $WIN_TEMP_PATH/bin/moc.exe &&
+            rm $WIN_TEMP_PATH/bin/rcc.exe &&
+            ln -s $TEMP_PATH/bin/rcc $WIN_TEMP_PATH/bin/rcc.exe &&
+            rm $WIN_TEMP_PATH/bin/uic.exe &&
+            ln -s $TEMP_PATH/bin/uic $WIN_TEMP_PATH/bin/uic.exe'
+    
+    - name: Install libcorrect
+      run: 'git clone https://github.com/quiet/libcorrect &&
+            cd libcorrect &&
+            mkdir build &&
+            cd build &&
+            cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=../cmake/mingw-w64-x86_64.cmake -DCMAKE_INSTALL_PREFIX=$WIN_TEMP_PATH .. &&
+            make -j4 &&
+            make install'
+
+    - name: Install muparser
+      run: 'git clone https://github.com/beltoforion/muparser &&
+            cd muparser &&
+            mkdir build &&
+            cd build &&
+            cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=../cmake/mingw-w64-x86_64.cmake -DCMAKE_INSTALL_PREFIX=$WIN_TEMP_PATH -DENABLE_OPENMP=OFF -DENABLE_SAMPLES=OFF -DCMAKE_SHARED_LINKER_FLAGS="-static-libstdc++" .. &&
+            make -j4 &&
+            make install'
+
+    - name: Compile LeanHRPT
+      run: 'mkdir build &&
+            cd build &&
+            cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_TOOLCHAIN_FILE=../cmake/mingw-w64-x86_64.cmake -DCMAKE_INSTALL_PREFIX=$WIN_TEMP_PATH -DWAR_CRIMES=1 .. &&
+            make -j4'
+
+    - name: Package
+      run: 'mkdir LeanHRPT-Decode &&
+            mkdir LeanHRPT-Decode/plugins &&
+            mkdir LeanHRPT-Decode/plugins/styles &&
+            mkdir LeanHRPT-Decode/platforms &&
+            cp logo128.png                                             LeanHRPT-Decode/ &&
+            cp presets.ini                                             LeanHRPT-Decode/ &&
+            cp calibration.ini                                         LeanHRPT-Decode/ &&
+            cp build/LeanHRPT-Decode.exe                               LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/bin/Qt5Core.dll                          LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/bin/Qt5Gui.dll                           LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/bin/Qt5Widgets.dll                       LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/lib/libcorrect.dll                       LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/bin/libmuparser.dll                      LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/bin/libgcc_s_seh-1.dll                   LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/bin/libstdc++-6.dll                      LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/bin/libwinpthread-1.dll                  LeanHRPT-Decode/ &&
+            cp /usr/lib/gcc/x86_64-w64-mingw32/9.3-win32/libgomp-1.dll LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/plugins/styles/qwindowsvistastyle.dll    LeanHRPT-Decode/plugins/styles/ &&
+            cp $WIN_TEMP_PATH/plugins/platforms/qwindows.dll           LeanHRPT-Decode/platforms/ &&
+            zip -r LeanHRPT-Decode.zip LeanHRPT-Decode/'
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: LeanHRPT_Decode-x86_64-w64
+        path: ./LeanHRPT-Decode.zip
