Flip MHS horizontally And stop trying to calibrate it as AVHRR

--- a/calibration.ini
+++ b/calibration.ini
@@ -11,120 +11,120 @@
 #   http://www.nsmc.org.cn/en/NSMC/Contents/100089.html
 #
 
-[MetOp-A/1]
+[MetOp-A_AVHRR/1]
 a1 = 0.05747
 b1 = -2.324
 a2 = 0.1698
 b2 = -58.62
 c = 501.01
-[MetOp-A/2]
+[MetOp-A_AVHRR/2]
 a1 = 0.07261
 b1 = -2.886
 a2 = 0.2157
 b2 = -74.47
 c = 500.42
-[MetOp-A/3]
+[MetOp-A_AVHRR/3]
 a1 = 0.03539
 b1 = -1.454
 a2 = 0.2458
 b2 = -107.07
 c = 501.94
 
-[MetOp-B/1]
+[MetOp-B_AVHRR/1]
 a1 = 0.05732
 b1 = -2.258
 a2 = 0.1698
 b2 = -58.58
 c = 500.62
-[MetOp-B/2]
+[MetOp-B_AVHRR/2]
 a1 = 0.06435
 b1 = -2.598
 a2 = 0.1896
 b2 = -65.58
 c = 503.00
-[MetOp-B/3]
+[MetOp-B_AVHRR/3]
 a1 = 0.03290
 b1 = -1.382
 a2 = 0.2291
 b2 = -99.67
 c = 500.85
 
-[MetOp-C/1]
+[MetOp-C_AVHRR/1]
 a1 = 0.05506
 b1 = -2.223
 a2 = 0.1613
 b2 = -55.21
 c = 498.68
-[MetOp-C/2]
+[MetOp-C_AVHRR/2]
 a1 = 0.06351
 b1 = -2.601
 a2 = 0.1861
 b2 = -63.88
 c = 500.01
-[MetOp-C/3]
+[MetOp-C_AVHRR/3]
 a1 = 0.03269
 b1 = -1.326
 a2 = 0.2300
 b2 = -99.73
 c = 498.72
 
-[NOAA-15/1]
+[NOAA-15_AVHRR/1]
 a1 = 0.05680
 b1 = -2.187
 a2 = 0.1633
 b2 = -54.99
 c = 496.00
-[NOAA-15/2]
+[NOAA-15_AVHRR/2]
 a1 = 0.05960
 b1 = -2.410
 a2 = 0.1629
 b2 = -55.24
 c = 511.00
 
-[NOAA-18/1]
+[NOAA-18_AVHRR/1]
 a1 = 0.06168
 b1 = -2.432
 a2 = 0.1839
 b2 = -63.25
 c = 501.54
-[NOAA-18/2]
+[NOAA-18_AVHRR/2]
 a1 = 0.07524
 b1 = -2.964
 a2 = 0.2258
 b2 = -78.66
 c = 500.40
 
-[NOAA-19/1]
+[NOAA-19_AVHRR/1]
 a1 = 0.05571
 b1 = -2.165
 a2 = 0.1643
 b2 = -56.49
 c = 496.43
-[NOAA-19/2]
+[NOAA-19_AVHRR/2]
 a1 = 0.06649
 b1 = -2.579
 a2 = 0.1981
 b2 = -68.37
 c = 500.37
 
-[FengYun-3B/1]
+[FengYun-3B_VIRR/1]
 a = 0.1264
 b = -1.4320
-[FengYun-3B/2]
+[FengYun-3B_VIRR/2]
 a = 0.1353
 b = -1.6236
-[FengYun-3B/6]
+[FengYun-3B_VIRR/6]
 a = 0.0919
 b = -2.4821
-[FengYun-3B/7]
+[FengYun-3B_VIRR/7]
 a = 0.0938
 b = -1.1494
-[FengYun-3B/8]
+[FengYun-3B_VIRR/8]
 a = 0.0857
 b = -1.0280
-[FengYun-3B/9]
+[FengYun-3B_VIRR/9]
 a = 0.0803
 b = -0.9636
-[FengYun-3B/10]
+[FengYun-3B_VIRR/10]
 a = 0.0630
 b = -0.7628
