Add SWIR+NIR preset

--- a/presets.ini
+++ b/presets.ini
@@ -31,6 +31,12 @@ expression = rgb(ch1, ch9, ch7)
 
 # Blended composites
 # (goal is to produce satisfying false color)
+[SWIR+NIR]
+description = 50/50 mix of SWIR and NIR
+category = Blended Composites
+author = peter kooistra
+imagers = MSU-MR|AVHRR|VIRR
+expression = rgb(SWIR*0.5+ch2*0.5, ch2, ch1)
 [CSWIR]
 description = False color Combined Shortwave-Infrared
 category = Blended Composites
