--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,15 @@ jobs:
             make -j4 &&
             make install'
 
+    - name: Install libpredict
+      run: 'git clone https://github.com/la1k/libpredict &&
+            cd libpredict &&
+            mkdir build &&
+            cd build &&
+            cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=$TEMP_PATH .. &&
+            make -j4 &&
+            make install'
+
     - name: Install muparser
       run: 'git clone https://github.com/beltoforion/muparser &&
             cd muparser &&
@@ -74,6 +83,7 @@ jobs:
             cp calibration.ini                   LeanHRPT-Decode.AppDir/ &&
             cp -r $TEMP_PATH/plugins/platforms/  LeanHRPT-Decode.AppDir/usr/plugins/ &&
             cp $TEMP_PATH/lib/libQt5Gui.so.5     LeanHRPT-Decode.AppDir/usr/lib/ &&
+            cp $TEMP_PATH/lib/libQt5Network.so.5 LeanHRPT-Decode.AppDir/usr/lib/ &&
             cp $TEMP_PATH/lib/libQt5Widgets.so.5 LeanHRPT-Decode.AppDir/usr/lib/ &&
             cp $TEMP_PATH/lib/libQt5Core.so.5    LeanHRPT-Decode.AppDir/usr/lib/ &&
             cp $TEMP_PATH/lib/libQt5XcbQpa.so.5  LeanHRPT-Decode.AppDir/usr/lib/ &&
@@ -81,6 +91,7 @@ jobs:
             cp $TEMP_PATH/lib/libicuuc.so.56     LeanHRPT-Decode.AppDir/usr/lib/ &&
             cp $TEMP_PATH/lib/libicui18n.so.56   LeanHRPT-Decode.AppDir/usr/lib/ &&
             cp $TEMP_PATH/lib/libicudata.so.56   LeanHRPT-Decode.AppDir/usr/lib/ &&
+            cp $TEMP_PATH/lib/libpredict.so      LeanHRPT-Decode.AppDir/usr/lib/ &&
             cp $TEMP_PATH/lib/libcorrect.so      LeanHRPT-Decode.AppDir/usr/lib/ &&
             cp $TEMP_PATH/lib/libmuparser.so     LeanHRPT-Decode.AppDir/usr/lib/ &&
             cp build/LeanHRPT-Decode             LeanHRPT-Decode.AppDir/usr/bin/ &&
@@ -132,6 +143,15 @@ jobs:
             make -j4 &&
             make install'
 
+    - name: Install libpredict
+      run: 'git clone https://github.com/la1k/libpredict &&
+            cd libpredict &&
+            mkdir build &&
+            cd build &&
+            cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=../cmake/mingw-w64-x86_64.cmake -DCMAKE_INSTALL_PREFIX=$WIN_TEMP_PATH .. &&
+            make -j4 &&
+            make install'
+
     - name: Install muparser
       run: 'git clone https://github.com/beltoforion/muparser &&
             cd muparser &&
@@ -157,8 +177,10 @@ jobs:
             cp calibration.ini                                         LeanHRPT-Decode/ &&
             cp build/LeanHRPT-Decode.exe                               LeanHRPT-Decode/ &&
             cp $WIN_TEMP_PATH/bin/Qt5Core.dll                          LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/bin/Qt5Network.dll                       LeanHRPT-Decode/ &&
             cp $WIN_TEMP_PATH/bin/Qt5Gui.dll                           LeanHRPT-Decode/ &&
             cp $WIN_TEMP_PATH/bin/Qt5Widgets.dll                       LeanHRPT-Decode/ &&
+            cp $WIN_TEMP_PATH/lib/libpredict.dll                       LeanHRPT-Decode/ &&
             cp $WIN_TEMP_PATH/lib/libcorrect.dll                       LeanHRPT-Decode/ &&
             cp $WIN_TEMP_PATH/bin/libmuparser.dll                      LeanHRPT-Decode/ &&
             cp $WIN_TEMP_PATH/bin/libgcc_s_seh-1.dll                   LeanHRPT-Decode/ &&
