IR calibration on NOAA

--- a/calibration.ini
+++ b/calibration.ini
@@ -2,13 +2,15 @@
 # LeanHRPT calibration coefficients file
 # 
 #  This file contains the coefficients user to calibrate visible channels,
-#  currently it supports 2 types of calibration:
+#  currently it supports 3 types of calibration:
 #   Linear (VIRR and MSU-MR)
 #   Split linear (AVHRR)
+#   Radiance (IR)
 # 
 #  Sources:
 #   https://www.ospo.noaa.gov/data/ppp/notice_files/aug1021.html
 #   http://www.nsmc.org.cn/en/NSMC/Contents/100089.html
+#   NOAA KLM User's Guide, August 2014 Revision
 #
 
 [MetOp-A_AVHRR/1]
@@ -80,6 +82,30 @@ b1 = -2.410
 a2 = 0.1629
 b2 = -55.24
 c = 511.00
+[NOAA-15_AVHRR/3]
+ns = 0.0
+b0 = 0.0
+b1 = 0.0
+b2 = 0.0
+vc = 2695.9743
+a = 1.621256
+b = 0.998015
+[NOAA-15_AVHRR/4]
+ns = -4.50
+b0 = 4.76
+b1 = -0.0932
+b2 = 0.0004524
+vc = 925.4075
+a = 0.337810
+b = 0.998719
+[NOAA-15_AVHRR/5]
+ns = -3.61
+b0 = 3.83
+b1 = -0.0659
+b2 = 0.0002811
+vc = 839.8979
+a = 0.304558
+b = 0.999024
 
 [NOAA-18_AVHRR/1]
 a1 = 0.06168
@@ -93,6 +119,30 @@ b1 = -2.964
 a2 = 0.2258
 b2 = -78.66
 c = 500.40
+[NOAA-18_AVHRR/3]
+ns = 0.0
+b0 = 0.0
+b1 = 0.0
+b2 = 0.0
+vc = 2659.7952
+a = 1.698704
+b = 0.996960
+[NOAA-18_AVHRR/4]
+ns = -5.53
+b0 = 5.82
+b1 = -0.11069
+b2 = 0.00052337
+vc = 928.1460
+a = 0.436645
+b = 0.998607
+[NOAA-18_AVHRR/5]
+ns = -2.22
+b0 = 2.67
+b1 = -0.04360
+b2 = 0.00017715
+vc = 833.2532
+a = 0.253179
+b = 0.999057
 
 [NOAA-19_AVHRR/1]
 a1 = 0.05571
@@ -106,6 +156,30 @@ b1 = -2.579
 a2 = 0.1981
 b2 = -68.37
 c = 500.37
+[NOAA-19_AVHRR/3]
+ns = 0.0
+b0 = 0.0
+b1 = 0.0
+b2 = 0.0
+vc = 2670.0
+a = 1.67396
+b = 0.997364
+[NOAA-19_AVHRR/4]
+ns = -5.49
+b0 = 5.70
+b1 = -0.11187
+b2 = 0.00054668
+vc = 928.9
+a = 0.53959
+b = 0.998534
+[NOAA-19_AVHRR/5]
+ns = -3.39
+b0 = 3.58
+b1 = -0.05991
+b2 = 0.00024985
+vc = 831.9
+a = 0.36064
+b = 0.998913
 
 [FengYun-3B_VIRR/1]
 a = 0.1264
