More advanced georeferencing Featuring pitch correction™️ and move Qt UI files into their own directory

--- a/projection.ini
+++ b/projection.ini
@@ -2,47 +2,56 @@
 fov = 55.31
 yaw = 2.3
 roll = 0.1
+pitch = 0.0
 toffset = -0.33
 [NOAA-19_AVHRR]
 fov = 55.31
 yaw = 2.3
 roll = 0.1
+pitch = 0.0
 toffset = -0.33
 
 [MetOp-A_AVHRR]
 fov = 55.31
 yaw = 0.0
 roll = 0.1
+pitch = 0.0
 toffset = 0.0
 [MetOp-B_AVHRR]
 fov = 55.31
 yaw = 0.0
 roll = 0.1
+pitch = 0.0
 toffset = 0.0
 [MetOp-C_AVHRR]
 fov = 55.31
 yaw = 0.0
 roll = 0.1
+pitch = 0.0
 toffset = 0.0
 
 [MetOp-A_MHS]
 fov = 50.0
 yaw = 0.0
 roll = 0.5
+pitch = 0.0
 toffset = 0.5
 [MetOp-B_MHS]
 fov = 50.0
 yaw = 0.0
 roll = 0.5
+pitch = 0.0
 toffset = 0.5
 [MetOp-C_MHS]
 fov = 50.0
 yaw = 0.0
 roll = 0.5
+pitch = 0.0
 toffset = 0.5
 
 [Meteor-M22_MSU-MR]
 fov = 55.25
 yaw = 2.8
 roll = 0.35
+pitch = 0.0
 toffset = 0.4
