FengYun projection support IR calibration is also being disabled for the meantime

--- a/projection.ini
+++ b/projection.ini
@@ -50,8 +50,21 @@ pitch = 0.0
 toffset = 0.5
 
 [Meteor-M22_MSU-MR]
-fov = 55.25
-yaw = 2.8
-roll = 0.35
-pitch = 0.0
-toffset = 0.4
+fov = 55.15
+yaw = 2.3
+roll = -0.18
+pitch = -0.1
+toffset = 0
+
+[FengYun-3C_VIRR]
+fov = 55.31
+yaw = 2.7
+roll = 0.0
+pitch = -0.15
+toffset = 0.0
+[FengYun-3B_VIRR]
+fov = 55.31
+yaw = 2.7
+roll = 0.0
+pitch = -0.15
+toffset = 0.0
